--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFFFFF" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/suitcase_icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
