--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    <meta name="theme-color" content="#FFFFFF" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: light)"
+      content="white"
+    />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
