--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap"
+    />
     <script
       src="https://kit.fontawesome.com/1755d5abdd.js"
       crossorigin="anonymous"
