debugged stacking context

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,7 @@
       content="white"
     />
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="send and transport packages safely" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/suitcase_icon.png" />
     <!--
